--- a/tiger200k/index.html
+++ b/tiger200k/index.html
@@ -228,7 +228,7 @@
         <h3>Xianpan Zhou</h3>
         <p style="text-align: center;">zhouxianpan@qq.com<p>
         <div class="buttons">
-            <a href="#" class="btn btn-paper">Arxiv</a>
+            <a href="https://arxiv.org/abs/2504.15182" class="btn btn-paper">Arxiv</a>
             <a href="https://huggingface.co/collections/tinytigerpan/tiger200k-680b013101d997f97f29c030" class="btn btn-huggingface">HuggingFace</a>
             <a href="#" class="btn btn-github">GitHub</a>
         </div>
