--- a/tiger200k/index.html
+++ b/tiger200k/index.html
@@ -230,7 +230,7 @@
         <div class="buttons">
             <a href="https://arxiv.org/abs/2504.15182" class="btn btn-paper">Arxiv</a>
             <a href="https://huggingface.co/collections/tinytigerpan/tiger200k-680b013101d997f97f29c030" class="btn btn-huggingface">HuggingFace</a>
-            <a href="#" class="btn btn-github">GitHub</a>
+            <a href="https://github.com/TinyTigerPan/tiger200k" class="btn btn-github">GitHub</a>
         </div>
         
         <div class="abstract">
